Prevent flex from causing menu items from wrapping on to second line.

--- a/wp-content/themes/caribbean/less/navigation.less
+++ b/wp-content/themes/caribbean/less/navigation.less
@@ -30,6 +30,7 @@
 
 .navbar .nav > li > a {
 	color: @black;
+	white-space: nowrap;
 	&:hover {
 		background-color: transparent;
 		color: @blue;
